name:                bigword
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type:     git
    location: https://github.com/nickspinale/bigword

library
  exposed-modules:       Data.Word.N
                       , Data.Word.N.Util
  -- other-modules:       
  other-extensions:      DataKinds
                       , DeriveDataTypeable
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , MultiParamTypeClasses
                       , Rank2Types
                       , RankNTypes
                       , ScopedTypeVariables
                       , TypeFamilies
                       , TypeOperators
                       , UndecidableInstances
  build-depends:       base, mod-n, data-type-util, transformers, tagged
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-suite tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is: Properties.hs
  Build-depends: base >= 4.0 && < 5,
                 binary,
                 bytestring,
                 test-framework >= 0.3.3 && < 0.9,
                 test-framework-quickcheck2 >= 0.2.9 && < 0.4,
                 test-framework-hunit >= 0.2.6 && < 0.4,
                 QuickCheck >= 2.4.0.1,
                 HUnit >= 1.2.2.3
