name:           bigword
version:        0.1.0.0
license:        MIT
copyright:      Nick Spinale <spinalen@carleton.edu>
author:         Nick Spinale <spinalen@carleton.edu>
maintainer:     Nick Spinale <spinalen@carleton.edu>
synopsis:       Fixed-size bit-vectors
description:    Fixed-size bit-vectors as wrapped Integers, using GHC.TypeLits.
                Inspired by the largeword package by Dominic Steinitz.
homepage:       https://github.com/nickspinale/bigword
category:       Data
stability:      experimental
build-type:     Simple
cabal-version:  >= 1.9.2
tested-with:    GHC == 7.6.2, GHC == 7.8.2
-- Tests/Properties.hs shouldn't have to go here, but the source files
-- for the test-suite stanzas don't get picked up by `cabal sdist`.
Extra-source-files: tests/Properties.hs

source-repository head
    type:     git
    location: https://github.com/nickspinale/bigword

Library
  hs-source-dirs:    src
  build-depends:     base
                   , mod-n
                   , data-type-util
                   , transformers
                   , tagged
  exposed-modules:   Data.Word.N
                   , Data.Word.N.Util

Test-suite tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is: Properties.hs
  Build-depends: base >= 4.0 && < 5,
                 binary,
                 bytestring,
                 test-framework >= 0.3.3 && < 0.9,
                 test-framework-quickcheck2 >= 0.2.9 && < 0.4,
                 test-framework-hunit >= 0.2.6 && < 0.4,
                 QuickCheck >= 2.4.0.1,
                 HUnit >= 1.2.2.3,
                 bigword
